--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = atmelsam
 board = seeed_wio_terminal
 framework = arduino
+monitor_speed = 115200
 lib_deps = 
 	sparkfun/SparkFun BQ27441 LiPo Fuel Gauge Arduino Library@^1.1.0
 	seeed-studio/Seeed Arduino FS@^2.1.1
